--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,94 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes moveArrow {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(4px);
+  }
+}
+
+.contour {
+  fill: var(--text-color);
+  transition: fill 0.1s linear;
+}
+
+.sparks {
+  opacity: 0;
+  fill: var(--color-red);
+}
+
+.main-body {
+  transition: fill 0.3s linear;
+  fill: var(--main-bg-color);
+}
+
+.core {
+  transition: fill 0.3s 0.03s linear;
+  fill: var(--main-bg-color);
+}
+
+.like-icon:hover .core {
+  transition: fill 0.3s linear;
+  fill: var(--text-color);
+}
+
+.like-icon:hover .main-body {
+  transition: fill 0.3s 0.05s linear;
+  fill: var(--text-color);
+}
+
+.like-icon:active .core {
+  transition: fill 0.3s linear;
+  fill: var(--color-red);
+}
+
+.like-icon:active .main-body {
+  transition: fill 0.3s 0.05s linear;
+  fill: var(--color-red);
+}
+
+.like-icon.is-liked .core {
+  transition: fill 0.3s linear;
+  fill: var(--color-red);
+}
+
+.like-icon.is-liked .main-body {
+  transition: fill 0.3s 0.05s linear;
+  fill: var(--color-red);
+}
+
+.like-icon.is-liked .contour {
+  transition: fill 0.3s 0.06s linear;
+  fill: var(--color-red);
+}
+
+.is-liked .heart {
+  animation: scaleHeart 0.3s 0.1s ease-in alternate;
+}
+
+@keyframes scaleHeart {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.05);
+  }
+}
+
+.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in alternate;
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
