--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,360 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: grid;
+  place-content: center;
+  background: var(--main-bg-color);
+  background-image: var(--bg-image);
+  font-family: var(--main-font);
+  color: var(--text-color);
+  font-variation-settings: "wght" var(--weight-text);
+}
+
+.header {
+  font-family: var(--accent-font);
+  background: var(--main-bg-color);
+  border: 2px solid var(--text-color);
+  display: grid;
+  place-items: center;
+  max-width: 700px;
+  margin-block: 100px;
+}
+
+.header__logo {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  margin-block-start: 136px;
+  margin-block-end: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+}
+
+.header__title {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  margin-block-end: 25px;
+  text-transform: uppercase;
+}
+
+.theme-menu__list {
+  display: grid;
+  gap: 11px;
+  margin-block-end: 25px;
+}
+
+.theme-menu__button {
+  position: relative;
+  margin-inline-start: 15px;
+  transition: 0.3s;
+  display: flex;
+  background-color: inherit;
+  border: none;
+  font-size: 14px;
+  text-transform: uppercase;
+  justify-content: start;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  top: 0;
+  left: -15px;
+  width: 14px;
+  height: 14px;
+  animation-direction: alternate;
+  animation: moveArrow 0.5s ease-in-out infinite;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1.6px;
+  left: 5px;
+  bottom: -3px;
+  background-color: var(--text-color);
+  opacity: 0.6;
+  transition: 0.3s;
+}
+
+.theme-menu__button:focus-visible::after {
+  width: 87%;
+}
+
+.content {
+  max-width: 700px;
+  background-image: initial;
+}
+
+.card {
+  border: 2px solid var(--text-color);
+  margin-block-end: 51px;
+  background: var(--main-bg-color);
+}
+
+.card__title {
+  font-size: 18px;
+  font-variation-settings: "wght" var(--weight-title);
+  margin-block-end: 5px;
+  margin-inline: 10px;
+  padding-block-start: 3px;
+}
+
+.label-box {
+  position: relative;
+}
+
+.card__image {
+  position: relative;
+  width: 100%;
+  height: 701px;
+  margin-block-end: 21.8px;
+}
+
+.image-filter-sepia {
+  filter: sepia(100%);
+}
+
+.image-filter-multiple {
+  filter: contrast(300%) saturate(0.3) hue-rotate(250deg) blur(1px);
+}
+
+.image-filter-invert {
+  filter: invert(0.67);
+}
+
+.image-filter-saturate {
+  filter: saturate(800%);
+}
+
+.image-filter-grayscale {
+  filter: grayscale(1);
+}
+
+.image-filter-blur {
+  filter: blur(3px);
+}
+
+.image-filter-hue-rotate {
+  filter: hue-rotate(110deg);
+}
+
+.label {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 2;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  color: var(--text-color);
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+  text-shadow: 1px 1px 0 var(--label-shadow), 1px -1px 0 var(--label-shadow),
+    -1px 1px 0 var(--label-shadow), -1px -1px 0 var(--label-shadow);
+}
+
+@supports (
+  (text-stroke: 1px var(--label-shadow)) or
+    (-webkit-text-stroke: 1px var(--label-shadow))
+) {
+  .label {
+    -webkit-text-stroke: 1px var(--label-shadow);
+    text-stroke: 1px var(--label-shadow);
+    text-shadow: none;
+  }
+}
+
+.card__text {
+  margin-inline: 25.2px;
+  margin-block-end: 26px;
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 1.16;
+}
+
+.card__text:last-of-type {
+  margin-block-end: 0;
+}
+
+.card__items {
+  display: flex;
+  justify-content: end;
+  margin-block-start: 26px;
+  margin-inline-end: 25px;
+  gap: 6px;
+}
+
+.button {
+  display: grid;
+  place-items: center;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 0.9;
+  background: var(--main-bg-color);
+  border: 2px solid var(--text-color);
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  transition: color 0.5s ease-in-out;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--text-color);
+  z-index: -1;
+  transition: width 0.5s ease-in-out;
+}
+
+.button:hover::before {
+  width: 100%;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px var(--text-color);
+}
+
+.button__text {
+  color: var(--button-text-color);
+  mix-blend-mode: difference;
+}
+
+.card__like-button {
+  width: 130px;
+  min-height: 38px;
+  margin-block-end: 25px;
+  position: relative;
+}
+
+.card__icon-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-block-end: 25px;
+  width: 39px;
+  height: 36px;
+  margin-block-start: 1px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px solid var(--text-color);
+}
+
+.like-icon {
+  transform: translateX(-5.8px);
+}
+
+.button__save {
+  display: grid;
+  place-items: center;
+  margin-block-end: 105px;
+}
+
+.save-button {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  width: 341px;
+  min-height: 55px;
+  background: var(--main-bg-color);
+}
+
+.save-button__floppy {
+  color: var(--button-text-color);
+  mix-blend-mode: difference;
+}
+
+.dialog {
+  font-family: var(--accent-font);
+  color: var(--text-color);
+  line-height: 1.5;
+  text-transform: uppercase;
+  width: 357px;
+  padding-inline: 32px;
+  background-color: var(--main-bg-color);
+}
+
+.dialog::backdrop {
+  opacity: 0.75;
+  background: #000;
+}
+
+.dialog__items {
+  display: grid;
+  place-items: center;
+  grid-template-columns: 40px 234px;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+.dialog__title {
+  font-size: 14px;
+}
+
+.button__dialog-close {
+  width: 100%;
+  padding-block: 10px;
+  text-transform: uppercase;
+}
+
+@media (width <= 376px) {
+  .card__image {
+    height: 375px;
+  }
+
+  .header__logo {
+    margin-block-start: 120px;
+    margin-block-end: 19px;
+  }
+
+  .label {
+    right: 10px;
+  }
+
+  .card__text {
+    margin-inline-end: 29px;
+    margin-block-end: 27px;
+  }
+
+  .save-button {
+    flex-direction: column;
+    width: 310px;
+    min-height: 82px;
+    gap: 16px;
+  }
+
+  .save-button__floppy {
+    scale: 1.4;
+    transform: translateY(2px);
+  }
 }
