--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,44 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+  --main-bg-color: #fff;
+  --text-color: #000;
+  --bg-image: repeating-linear-gradient(#d3d3d3, transparent 4px),
+    repeating-linear-gradient(to right, #d3d3d3, transparent 4px),
+    linear-gradient(#e7e7e7, #1a1a1a);
+  --weight-title: 700;
+  --weight-text: 400;
+  --color-red: #f00;
+  --label-shadow: #fff;
+  --button-text-color: #fff;
+}
+
+:root.theme-dark {
+  --main-bg-color: #000;
+  --text-color: #00cc14;
+  --weight-title: 785;
+  --weight-text: 465;
+  --bg-image: repeating-linear-gradient(#000, transparent 4px),
+    repeating-linear-gradient(to right, #000, transparent 4px),
+    linear-gradient(#007f0c, #004306);
+  --color-red: #f00;
+  --label-shadow: #000;
+  --button-text-color: #00cc14;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-bg-color: #000;
+    --text-color: #00cc14;
+    --weight-title: 785;
+    --weight-text: 465;
+    --bg-image: repeating-linear-gradient(#000, transparent 4px),
+      repeating-linear-gradient(to right, #000, transparent 4px),
+      linear-gradient(#007f0c, #004306);
+    --color-red: #f00;
+    --label-shadow: #000;
+    --button-text-color: #00cc14;
+  }
+}
