--- a/styles/themes.css
+++ b/styles/themes.css
@@ -8,9 +8,13 @@
 :root.theme-light {
   --main-bg-color: #fff;
   --text-color: #000;
-  --bg-image: repeating-linear-gradient(#d3d3d3, transparent 4px),
-    repeating-linear-gradient(to right, #d3d3d3, transparent 4px),
-    linear-gradient(#e7e7e7, #1a1a1a);
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
   --weight-title: 700;
   --weight-text: 400;
   --color-red: #f00;
@@ -23,9 +27,13 @@
   --text-color: #00cc14;
   --weight-title: 785;
   --weight-text: 465;
-  --bg-image: repeating-linear-gradient(#000, transparent 4px),
-    repeating-linear-gradient(to right, #000, transparent 4px),
-    linear-gradient(#007f0c, #004306);
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
   --color-red: #f00;
   --label-shadow: #000;
   --button-text-color: #00cc14;
@@ -37,9 +45,13 @@
     --text-color: #00cc14;
     --weight-title: 785;
     --weight-text: 465;
-    --bg-image: repeating-linear-gradient(#000, transparent 4px),
-      repeating-linear-gradient(to right, #000, transparent 4px),
-      linear-gradient(#007f0c, #004306);
+    --bg-image: repeating-linear-gradient(
+        to right,
+        #000 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
     --color-red: #f00;
     --label-shadow: #000;
     --button-text-color: #00cc14;
