--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,9 +5,13 @@
   --accent-font: "PressStart2P", fantasy;
   --text-color: #000;
   --main-bg-color: #fff;
-  --bg-image: repeating-linear-gradient(#d3d3d3, transparent 4px),
-    repeating-linear-gradient(to right, #d3d3d3, transparent 4px),
-    linear-gradient(#e7e7e7, #1a1a1a);
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
   --weight-title: 700;
   --weight-text: 400;
   --color-red: #f00;
