--- a/styles/animations.css
+++ b/styles/animations.css
@@ -79,6 +79,7 @@
 
 .is-liked .heart {
   animation: scaleHeart 0.3s 0.1s ease-in alternate;
+  transform-origin: center;
 }
 
 @keyframes scaleHeart {
